--- a/cv.html
+++ b/cv.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
-</div>
-</header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Creative CV</title>
+</head>
+<body bgcolor="#FEF3E2">
+   
+    
+<center><h1><b>Mon CV</h1></b></center>
 
+    <header><center>
+       <a href="index.html">Home</a> <a href="cv.html">CV</a> <a href="Contact.html" class="nav-link">Contact</a>
+</center>
+<section>
+        </center>
+    </header>
+<fieldset><center>
+<img src="assets/profile-circle.svg" width="150" height="150" alt="">
+<h1><b><em>Mohamed Aghbalou</em></b></h1>
+<fieldset>
+    <legend><b><em> BIO</em></b></legend><center>Passionné par le développement web et les marchés finnancier, je suis un apprenant à Solicode, où j'acquiers les compétences techniques et les soft skills nécessaires pour réussir dans le monde de la tech.</center>
 
-<main class="container">
-<article>
-<header>
-<img src="assets/profile.webp" alt="Photo de profil de l'apprenant" width="150" height="150">
-<h2>Mohamed Aghbalou</h2>
-<p class="muted">trader</p>
-</header>
-
-
-<section aria-labelledby="exp">
-<h3 id="Experience">Expérience</h3>
-<ul>
-<li><strong>2025–2026</strong> Apprenant a solicode</li>
-</ul>
+ <a href="https://github.com/medsolicode" target="blank">
+               <img src="assets/github.png" width="30"  height="30" alt="github icon">
+                <a href="//" target="blank">
+               <img src="assets/email.png" width="25"  height="30" alt="MAIL icon">
+                <a href="//" target="blank">
+               <img src="assets/linked.png" width="30"  height="30" alt="linkedin icon">
+</fieldset>
 </section>
 
 
-<h3 id="competence">Compétences</h3>
-<ul>
-<li>HTML5</li>
-</ul>
+            </center></fieldset>
+    <tr>
+     <h2>Languages</h2>
+        <ul>
+          <li>Arabic — Native</li>
+          <li>English — Fluent</li>
+          <li>French — Intermediate</li>
+        </ul>
 
-<footer>
-</footer>
-</article>
-</main>
+        <h2>Certifications</h2>
+        <ul>
+          <li>Certificate Name — Year</li>
+          <li>Certificate Name — Year</li>
+        </ul>
 
 
-<footer class="site-footer">
-<div class="container">
-<p>2025 — solicode</p>
-</div>
-</footer>
+
+        </ul>
+    </td>
+
+</tr>
 </body>
-</html>
