--- a/contact.html
+++ b/contact.html
@@ -1,50 +1,103 @@
-<html lang="fr">
-<title>Contact — Mon Mini-site</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Creative CV - Mohamed Aghbalou</title>
 </head>
-<body>
-<header class="site-header">
-<div class="container">
-<h1 class="site-title">Contact</h1>
-<nav aria-label="Navigation principale">
-<ul class="nav">
-<li><a href="index.html">Accueil</a></li>
-<li><a href="cv.html">CV</a></li>
-<li><a href="contact.html" aria-current="page">Contact</a></li>
-</ul>
-</nav>
-</div>
-</header>
+<body bgcolor="#FEF3E2">
+  <header align="center">
+    <h1>Mon CV</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="cv.html">CV</a> |
+      <a href="contact.html">Contact</a>
+    </nav>
+    <hr>
+  </header>
 
+  <section align="center">
+    <img src="assets/profile-circle.svg" width="150" height="150" alt="photo"><br>
+    <h2><em>Mohamed Aghbalou</em></h2>
+    <p>
+      <a href="https://github.com/medsolicode" target="_blank">GitHub</a> |
+      <a href="mailto:example@email.com">Email</a> |
+      <a href="https://linkedin.com/in/username" target="_blank">LinkedIn</a>
+    </p>
+  </section>
 
-<main class="container">
-<section>
-<h2>Contacter moi</h2>
-<p></p>
+  <section>
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML, CSS</li>
+      <li>Git, GitHub, Team Collaboration</li>
+    </ul>
+    <hr>
+  </section>
 
+  <section>
+    <h2>Education</h2>
+    <table border="1" width="100%" cellpadding="8">
+      <tr>
+        <th>école</th>
+        <th>nom</th>
+      </tr>
+      <tr>
+        <td>univesitée</td>
+        <td>univesitée abdelmalek assadi </td>
+      </tr>
+      <tr>
+        <td>ecole</td>
+        <td>lycée imame ghazali - tetouan</td>
+      </tr>
+    </table>
+    <hr>
+  </section>
 
-<form action="#" method="post" class="contact-form" novalidate>
-<label for="name">Nom</label>
-<input type="text" id="name" name="name" required>
+  <section>
+    <h2>Experience</h2>
+    <table border="1" width="100%" cellpadding="8">
+      <tr>
+        <th>Position</th>
+        <th>société </th>
+      </tr>
+      <tr>
+        <td>ma position</td>
+        <td>société A</td>
+      </tr>
+      <tr>
+        <td>Freelance</td>
+        <td>Portfolio en GitHub</td>
+      </tr>
+    </table>
+    <hr>
+  </section>
+  <section align="center">
+    <h2>Contact Moi</h2>
+    <form action="#" method="post">
+      <fieldset>
+        <legend> Personal Information</legend>
+        <label for="name">Full Name:</label><br>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
 
+        <label for="email">Email Address:</label><br>
+        <input type="email" id="email" name="email" placeholder="your@email.com" required><br><br>
+        <legend>Message Details</legend>
+        <label for="subject">Subject:</label><br>
+        <input type="text" id="subject" name="subject" placeholder="Message subject"><br><br>
 
-<label for="email">Email</label>
-<input type="email" id="email" name="email" required>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea><br><br>
+      
+            <button type="submit">Send Message</button>
+    </form>
 
+      </fieldset>
 
-<label for="message">Message</label>
-<textarea id="message" name="message" rows="6" required></textarea>
+    <hr>
+  </section>
+  <footer align="center">
+    <p>© 2025 Solicode. All rights reserved.</p>
+  </footer>
 
-
-<button type="submit">Envoyer</button>
-</form>
-</section>
-</main>
-
-
-<footer class="site-footer">
-<div class="container">
-<p>&copy; 2025 — solicode</p>
-</div>
-</footer>
 </body>
 </html>
