--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <body>
     <center>
 <header class="site-header">
-<div class="container">
 <h1 class="site-title">Mon Mini-site</h1>
 <nav aria-label="Navigation principale">
-<ul class="nav">
-<li><a href="index.html" aria-current="page">Accueil</a></li>
+<ul>  <li><a href="index.html">Accueil</a></li>
 <li><a href="cv.html">CV</a></li>
 <li><a href="contact.html">Contact</a></li>
 </center>
